Resolved merge conflict in .DS_Store